# bilibili_user_clone

./: .gitignore  LICENSE  README.md  article_converter.py  auth.py  config.py  downloader.py  ffmpeg_utils.py  main.py  pyproject.toml  store.py  utils.py
.bilibili-clone/: downloads.db
bilibili-user-clone-skill/: SKILL.md
bilibili-user-clone-skill/references/: output_schema.md
docs/superpowers/plans/: 2026-04-30-avoid-redownload.md
docs/superpowers/specs/: 2026-04-30-avoid-redownload-design.md
fetcher/: article.py  audio.py  dynamic.py  enumerator.py  video.py
